Update bib and about

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,16 +4,19 @@
 @string{aps = {American Physical Society,}}
 
 @article{guerranti2021caregivermatcher,
-  title={{CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients}},
+  bibtex_show={true},
+  title={CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients},
   author={Guerranti, Filippo and Mannino, Mirco and Baccini, Federica and Bongini, Pietro and Pancino, Niccol and Visibelli, Anna and Marziali, Sara},
   journal={Procedia Computer Science},
   volume={192},
   pages={1696--1704},
   year={2021},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  selected={true}
 }
 
 @article{guerranti2022comparison,
+  bibtex_show={true},
   title={{A Comparison of Machine Learning Approaches for Predicting Employee Attrition}},
   author={Guerranti, Filippo and Dimitri, Giovanna Maria},
   journal={Applied Sciences},
@@ -21,16 +24,21 @@
   number={1},
   pages={267},
   year={2022},
-  publisher={MDPI}
+  publisher={MDPI},
+  selected={true}
 }
 
 @phdthesis{guerranti2022approximation, 
+  bibtex_show={true},
   title={{Approximation of Logical Reasoning using Neural Networks}}, 
   author={Guerranti, Filippo}, 
-  year={2022}
+  year={2022},
+  selected={true}
 } 
 @phdthesis{guerranti2019, 
+  bibtex_show={true},
   title={{Software for the Automatic Generation of Exams Date Calendar}}, 
   author={Guerranti, Filippo}, 
-  year={2022}
+  year={2022},
+  selected={true}
 } 
