--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,6 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
 @article{guerranti2021caregivermatcher,
   bibtex_show={true},
   title={CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients},
@@ -12,12 +10,13 @@
   pages={1696--1704},
   year={2021},
   publisher={Elsevier},
+  url={https://www.sciencedirect.com/science/article/pii/S1877050921016690},
   selected={true}
 }
 
 @article{guerranti2022comparison,
   bibtex_show={true},
-  title={{A Comparison of Machine Learning Approaches for Predicting Employee Attrition}},
+  title={A Comparison of Machine Learning Approaches for Predicting Employee Attrition},
   author={Guerranti, Filippo and Dimitri, Giovanna Maria},
   journal={Applied Sciences},
   volume={13},
@@ -30,15 +29,17 @@
 
 @phdthesis{guerranti2022approximation, 
   bibtex_show={true},
-  title={{Approximation of Logical Reasoning using Neural Networks}}, 
+  title={Approximation of Logical Reasoning using Neural Networks}, 
   author={Guerranti, Filippo}, 
   year={2022},
+  publisher={Università degli Studi di Siena},
   selected={true}
 } 
 @phdthesis{guerranti2019, 
   bibtex_show={true},
-  title={{Software for the Automatic Generation of Exams Date Calendar}}, 
+  title={Software for the Automatic Generation of Exams Date Calendar}, 
   author={Guerranti, Filippo}, 
-  year={2022},
+  year={2019},
+  publisher={Università degli Studi di Siena},
   selected={true}
 } 
