--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,8 @@
   year={2021},
   publisher={Elsevier},
   url={https://www.sciencedirect.com/science/article/pii/S1877050921016690},
-  selected={true}
+  selected={true},
+  category={conference},
 }
 
 @article{guerranti2022comparison,
@@ -24,22 +25,25 @@
   pages={267},
   year={2022},
   publisher={MDPI},
-  selected={true}
+  selected={true},
+  category={conference},
 }
 
-@phdthesis{guerranti2022approximation, 
+@article{guerranti2022approximation, 
   bibtex_show={true},
   title={Approximation of Logical Reasoning using Neural Networks}, 
   author={Guerranti, Filippo}, 
   year={2022},
   publisher={Università degli Studi di Siena},
-  selected={true}
+  selected={true},
+  category={thesis},
 } 
-@phdthesis{guerranti2019, 
+@article{guerranti2019, 
   bibtex_show={true},
   title={Software for the Automatic Generation of Exams Date Calendar}, 
   author={Guerranti, Filippo}, 
   year={2019},
   publisher={Università degli Studi di Siena},
-  selected={true}
+  selected={true},
+  category={thesis},
 } 
