--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -34,7 +34,7 @@
   title={Approximation of Logical Reasoning using Neural Networks}, 
   author={Guerranti, Filippo}, 
   year={2022},
-  publisher={Università degli Studi di Siena},
+  journal={Università degli Studi di Siena},
   selected={true},
   category={thesis},
 } 
@@ -43,7 +43,7 @@
   title={Software for the Automatic Generation of Exams Date Calendar}, 
   author={Guerranti, Filippo}, 
   year={2019},
-  publisher={Università degli Studi di Siena},
+  journal={Università degli Studi di Siena},
   selected={true},
   category={thesis},
 } 
