Remove bibtex_show

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,7 @@
 ---
 ---
 
-@article{guerranti2021caregivermatcher,
-  bibtex_show={true},
+@article{guerranti2021caregivermatcher
   title={CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients},
   author={Guerranti, Filippo and Mannino, Mirco and Baccini, Federica and Bongini, Pietro and Pancino, Niccol and Visibelli, Anna and Marziali, Sara},
   journal={Procedia Computer Science},
@@ -16,7 +15,6 @@
 }
 
 @article{guerranti2022comparison,
-  bibtex_show={true},
   title={A Comparison of Machine Learning Approaches for Predicting Employee Attrition},
   author={Guerranti, Filippo and Dimitri, Giovanna Maria},
   journal={Applied Sciences},
@@ -28,8 +26,7 @@
   category={conference},
 }
 
-@article{guerranti2022approximation, 
-  bibtex_show={true},
+@article{guerranti2022approximation,
   title={Approximation of Logical Reasoning using Neural Networks}, 
   author={Guerranti, Filippo}, 
   year={2022},
@@ -37,8 +34,7 @@
   selected={true},
   category={thesis},
 } 
-@article{guerranti2019, 
-  bibtex_show={true},
+@article{guerranti2019software,
   title={Software for the Automatic Generation of Exams Date Calendar}, 
   author={Guerranti, Filippo}, 
   year={2019},
