--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -12,6 +12,8 @@
   url={https://www.sciencedirect.com/science/article/pii/S1877050921016690},
   selected={true},
   category={conference},
+  abbr={Procedia CS},
+  bibtex_show={true},
 }
 
 @article{guerranti2022comparison,
@@ -24,6 +26,8 @@
   year={2022},
   publisher={MDPI},
   category={conference},
+  abbr={MDPI Appl. Sci.},
+  bibtex_show={true},
 }
 
 @article{guerranti2022approximation,
@@ -33,6 +37,8 @@
   journal={Università degli Studi di Siena},
   selected={true},
   category={thesis},
+  abbrev={MSc Thesis},
+  bibtex_show={true},
 } 
 @article{guerranti2019software,
   title={Software for the Automatic Generation of Exams Date Calendar}, 
@@ -40,4 +46,6 @@
   year={2019},
   journal={Università degli Studi di Siena},
   category={thesis},
+  abbrev={BSc Thesis},
+  bibtex_show={true},
 } 
