--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -30,21 +30,21 @@
   bibtex_show={true},
 }
 
-@article{guerranti2022approximation,
+@thesis{guerranti2022approximation,
   title={Approximation of Logical Reasoning using Neural Networks}, 
   author={Guerranti, Filippo}, 
   year={2022},
-  journal={Università degli Studi di Siena},
+  school={Università degli Studi di Siena},
   selected={true},
   category={thesis},
   abbrev={MSc Thesis},
   bibtex_show={true},
 } 
-@article{guerranti2019software,
+@thesis{guerranti2019software,
   title={Software for the Automatic Generation of Exams Date Calendar}, 
   author={Guerranti, Filippo}, 
   year={2019},
-  journal={Università degli Studi di Siena},
+  school={Università degli Studi di Siena},
   category={thesis},
   abbrev={BSc Thesis},
   bibtex_show={true},
