--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@article{guerranti2021caregivermatcher
+@article{guerranti2021caregivermatcher,
   title={CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients},
   author={Guerranti, Filippo and Mannino, Mirco and Baccini, Federica and Bongini, Pietro and Pancino, Niccol and Visibelli, Anna and Marziali, Sara},
   journal={Procedia Computer Science},
