--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -37,7 +37,7 @@
   school={Università degli Studi di Siena},
   selected={true},
   category={thesis},
-  abbrev={MSc Thesis},
+  abbr={MSc Thesis},
   bibtex_show={true},
 } 
 @thesis{guerranti2019software,
@@ -46,6 +46,6 @@
   year={2019},
   school={Università degli Studi di Siena},
   category={thesis},
-  abbrev={BSc Thesis},
+  abbr={BSc Thesis},
   bibtex_show={true},
 } 
