--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,11 +9,13 @@
   pages={1696--1704},
   year={2021},
   publisher={Elsevier},
-  url={https://www.sciencedirect.com/science/article/pii/S1877050921016690},
+  html={https://www.sciencedirect.com/science/article/pii/S1877050921016690},
   selected={true},
   category={conference},
   abbr={Procedia CS},
   bibtex_show={true},
+  abstract={Rare diseases affect a growing number of individuals. One key problem for patients and their caregivers is the difficulty in reaching experts and associations competent on a particular disease. As a consequence, caregivers, often family members of the patient, learn much about the disease from their own experience. CaregiverMatcher is a proof of concept providing a smart solution to build a network of caregivers, linked by a matching mechanism based on graph neural networks. The caregivers and their experience with rare diseases are described by node features. Associations and care centers are invited to share their knowledge on the platform.},
+  pdf={https://pdf.sciencedirectassets.com/280203/1-s2.0-S1877050921X00154/1-s2.0-S1877050921016690/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEBQaCXVzLWVhc3QtMSJHMEUCIQDFLaSCji3NoLgnhPFKW6T1RdJxdbrIO%2BwLNDkeXpQtGQIgYQQaJhcV%2BRbVHH5%2B8X8oAkKRbdacnURCIgxWxm7QqyYqvAUI7P%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAFGgwwNTkwMDM1NDY4NjUiDDQhhWSQJRbtDPmsOCqQBeo9Li3EP%2FyxPteurDD73lp9PO0CtBu83KLAqn4OYy3tWkU5MfcJv6%2BDm7kVO1Ot%2F5Tf81r8YKcWxUoixXMFr9vSjc4VCfhxBwNSGTjHrmz0%2FgjtIF1UV7m14ZRYDlBwgAc%2FefJK7t8nFcdMFERboyD4DMNEDavlfqfev3TGMv1RWTgO%2FPpNaCA22X6PoII74Qiv%2Bsei2AWbfKhkwGjnQ2ApW44b6eoz0HI6xceQxKfSSABbkXpYyn%2BeFHxu2%2FcCpz2VbRZpzGeFLSqTpeizBUWqR27R3%2FbEWXBHaMO7IsGWOZi2%2FL0IGQnByNfDtNXFCnqJaC4%2FWc6qMiDHqPFlHJgLr0NwExM2rAaJh8YwZY4wWCtGPfQraYRGfhJji9x8njbOHwAPnLt2nufKhdzfEnRcPKrO8%2Bk%2FK%2BddKBdU5kGSl59SAH3Ps%2Fx1FwfPtw8W7aNfVfTx%2FcsBxpobpT7Hjcg%2BExcxEXXwH5hnkvRs245IxQ%2FRg%2F2rcYvZJmhfzkezim5K9zNjY0gmtBJmx3s4FhyJChjX4BtaKajD92ljKVuh5FZONA9GhabyEnW228lOZ1YurhUAEqugZvvBQsNobvuv2c7pn0fV9w26Htp%2BMqCtw5JEdToyAQ3tiF5DceBBiVmibEP1bZDJCGiptq6oCdIqtVpUoPgLLAzFyPXJ2qW70JD1rH3MW36ze6jOsM8DVbk%2Fy%2FtWe5aBWVzhSm7nURGBSCIG3YGPb2POf416%2B2Ias%2FRLVhShyym62JDEXkg5tRr9VtuP4awZEzhiYpUXBEtySpWGi914UmRp0YWRR6TBwfs%2B2FfcuqKbLCY5PPoPPZMwXKejYB%2Ba0EwCI%2FtOrNOCxukIUepq%2BT7ss7q6KrjeMPrq%2B6cGOrEB1Pq7Txy8tiSG4a%2FAsN0rKZecqCFWriq7c53Xg81biOPKIIJW9MN8IkQ3NJCZqmsQknLRb7kjPJ78VyFQPQlC%2FPUk%2BZusA5fMHc%2FlRBDiatn9yNHRTFheaOi3fX4VaJjUtC6X1r%2FY7r0xIQk5o99qSDU0VLimB%2BYmMfH77v563LeNKRv%2Bbn6d8dHJgjMGP6ZNYBAhgcO%2FX1X%2F77TBQwmqhfeHF7MLO4%2FeLP4GpB6b%2Fl2W&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20230911T122828Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYY7333BYP%2F20230911%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=e0ed24f315c7d74021760e0b995c41d2b427473cbc5bb48cb97bcd4c89211082&hash=9eeffde66ad2fe2a18f44c765608aeb687b9bbccc7578d3293784b29e315d8e3&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S1877050921016690&tid=spdf-608434fe-08ef-4582-911d-d3063a626a3a&sid=1388a413134478418a0a0ee2165964044679gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=1e065b5152090b5d5651&rr=804fe9234d2a9a41&cc=de}
 }
 
 @article{guerranti2022comparison,
@@ -28,6 +30,8 @@
   category={conference},
   abbr={MDPI Appl. Sci.},
   bibtex_show={true},
+  abstract={Employee attrition is a major problem that causes many companies to incur in significant costs to find and hire new personnel. The use of machine learning and artificial intelligence methods to predict the likelihood of resignation of an employee, and the quitting causes, can provide HR departments with a valuable decision support system and, as a result, prevent a large waste of time and resources. In this paper, we propose a preliminary exploratory analysis of the application of machine learning methodologies for employee attrition prediction. We compared several classification models with the goal of finding the one that not only performs best, but is also well interpretable, in order to provide companies with the possibility of improving those aspects that have been shown to produce the quitting of their employees. Among the proposed methods, Logistic Regression performs the best, with an accuracy of 88% and an AUC-ROC of 85%.},
+  html={https://www.mdpi.com/2076-3417/13/1/267}
 }
 
 @thesis{guerranti2022approximation,
@@ -39,6 +43,7 @@
   category={thesis},
   abbr={MSc Thesis},
   bibtex_show={true},
+  abstract={Integrating reasoning and learning capabilities is one of the main challenges of artificial intelligence. Neural-symbolic approaches combine symbolic and subsymbolic methods to benefit from the potential of the two paradigms, while reducing their drawbacks. These methods have found numerous applications in relational domains where prior knowledge, usually in the form of a first-order logic theory, is used to infer new information about the relationships between entities in the domain. However, many neural-symbolic approaches still suffer from scalability issues and are not always able to handle the intrinsic uncertainty of the real-world. Relational Reasoning Networks (R2N) is an end-to-end neural-symbolic model that enables multi-hop subsymbolic reasoning by exploiting higher-level relational knowledge about the underlying logical atoms. However, the robust and consistent integration of logic semantics within the model is still an open subject of research. This thesis aims to analyse and devise new methods to address this problem. Empirical results show that R2N outperforms the baseline knowledge graph embedding methods on all three tasks of the Countries dataset. Moreover, injecting logic semantics on the output layer of the model slightly enhances the overall performance compared to the model without semantics and improves the model's interpretability.}
 } 
 @thesis{guerranti2019software,
   title={Software for the Automatic Generation of Exams Date Calendar}, 
