--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,22 @@
 ---
 ---
 
+
+@article{guerranti2023on,
+  title={On the Adversarial Robustness of Graph Contrastive Learning Methods},
+  author={Guerranti, Filippo and Yi, Zinuo and Starovoit, Anna and Mazen Kamel, Rafiq and Geisler, Simon and G{\"u}nnemann, Stephan},
+  journal={NeurIPS 2023 Workshop: New Frontiers in Graph Learning},
+  category={conference},
+  abbr={NeurIPS GLFrontiers},
+  bibtex_show={true},
+  abstract={Contrastive learning (CL) has emerged as a powerful framework for learning representations of images and text in a self-supervised manner while enhancing model robustness against adversarial attacks. More recently, researchers have extended the principles of contrastive learning to graph-structured data, giving birth to the field of graph contrastive learning (GCL). However, whether GCL methods can deliver the same advantages in adversarial robustness as their counterparts in the image and text domains remains an open question. In this paper, we introduce a comprehensive  tailored to assess the robustness of GCL models. We subject these models to  adversarial attacks targeting the graph structure, specifically in the evasion scenario. We evaluate node and graph classification tasks using diverse real-world datasets and attack strategies. With our work, we aim to offer insights into the robustness of GCL methods and hope to open avenues for potential future research directions.},
+  html={https://openreview.net/forum?id=wz6l6yLTv1},
+  pdf={https://openreview.net/attachment?id=wz6l6yLTv1&name=pdf},
+  selected={true},
+}
+
+
+
 @article{guerranti2021caregivermatcher,
   title={CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients},
   author={Guerranti, Filippo and Mannino, Mirco and Baccini, Federica and Bongini, Pietro and Pancino, Niccol and Visibelli, Anna and Marziali, Sara},
@@ -18,14 +34,14 @@
   pdf={https://pdf.sciencedirectassets.com/280203/1-s2.0-S1877050921X00154/1-s2.0-S1877050921016690/main.pdf?X-Amz-Security-Token=IQoJb3JpZ2luX2VjEBQaCXVzLWVhc3QtMSJHMEUCIQDFLaSCji3NoLgnhPFKW6T1RdJxdbrIO%2BwLNDkeXpQtGQIgYQQaJhcV%2BRbVHH5%2B8X8oAkKRbdacnURCIgxWxm7QqyYqvAUI7P%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FARAFGgwwNTkwMDM1NDY4NjUiDDQhhWSQJRbtDPmsOCqQBeo9Li3EP%2FyxPteurDD73lp9PO0CtBu83KLAqn4OYy3tWkU5MfcJv6%2BDm7kVO1Ot%2F5Tf81r8YKcWxUoixXMFr9vSjc4VCfhxBwNSGTjHrmz0%2FgjtIF1UV7m14ZRYDlBwgAc%2FefJK7t8nFcdMFERboyD4DMNEDavlfqfev3TGMv1RWTgO%2FPpNaCA22X6PoII74Qiv%2Bsei2AWbfKhkwGjnQ2ApW44b6eoz0HI6xceQxKfSSABbkXpYyn%2BeFHxu2%2FcCpz2VbRZpzGeFLSqTpeizBUWqR27R3%2FbEWXBHaMO7IsGWOZi2%2FL0IGQnByNfDtNXFCnqJaC4%2FWc6qMiDHqPFlHJgLr0NwExM2rAaJh8YwZY4wWCtGPfQraYRGfhJji9x8njbOHwAPnLt2nufKhdzfEnRcPKrO8%2Bk%2FK%2BddKBdU5kGSl59SAH3Ps%2Fx1FwfPtw8W7aNfVfTx%2FcsBxpobpT7Hjcg%2BExcxEXXwH5hnkvRs245IxQ%2FRg%2F2rcYvZJmhfzkezim5K9zNjY0gmtBJmx3s4FhyJChjX4BtaKajD92ljKVuh5FZONA9GhabyEnW228lOZ1YurhUAEqugZvvBQsNobvuv2c7pn0fV9w26Htp%2BMqCtw5JEdToyAQ3tiF5DceBBiVmibEP1bZDJCGiptq6oCdIqtVpUoPgLLAzFyPXJ2qW70JD1rH3MW36ze6jOsM8DVbk%2Fy%2FtWe5aBWVzhSm7nURGBSCIG3YGPb2POf416%2B2Ias%2FRLVhShyym62JDEXkg5tRr9VtuP4awZEzhiYpUXBEtySpWGi914UmRp0YWRR6TBwfs%2B2FfcuqKbLCY5PPoPPZMwXKejYB%2Ba0EwCI%2FtOrNOCxukIUepq%2BT7ss7q6KrjeMPrq%2B6cGOrEB1Pq7Txy8tiSG4a%2FAsN0rKZecqCFWriq7c53Xg81biOPKIIJW9MN8IkQ3NJCZqmsQknLRb7kjPJ78VyFQPQlC%2FPUk%2BZusA5fMHc%2FlRBDiatn9yNHRTFheaOi3fX4VaJjUtC6X1r%2FY7r0xIQk5o99qSDU0VLimB%2BYmMfH77v563LeNKRv%2Bbn6d8dHJgjMGP6ZNYBAhgcO%2FX1X%2F77TBQwmqhfeHF7MLO4%2FeLP4GpB6b%2Fl2W&X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Date=20230911T122828Z&X-Amz-SignedHeaders=host&X-Amz-Expires=300&X-Amz-Credential=ASIAQ3PHCVTYY7333BYP%2F20230911%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Signature=e0ed24f315c7d74021760e0b995c41d2b427473cbc5bb48cb97bcd4c89211082&hash=9eeffde66ad2fe2a18f44c765608aeb687b9bbccc7578d3293784b29e315d8e3&host=68042c943591013ac2b2430a89b270f6af2c76d8dfd086a07176afe7c76c2c61&pii=S1877050921016690&tid=spdf-608434fe-08ef-4582-911d-d3063a626a3a&sid=1388a413134478418a0a0ee2165964044679gxrqb&type=client&tsoh=d3d3LnNjaWVuY2VkaXJlY3QuY29t&ua=1e065b5152090b5d5651&rr=804fe9234d2a9a41&cc=de}
 }
 
-@article{guerranti2022comparison,
+@article{guerranti2023comparison,
   title={A Comparison of Machine Learning Approaches for Predicting Employee Attrition},
   author={Guerranti, Filippo and Dimitri, Giovanna Maria},
   journal={Applied Sciences},
   volume={13},
   number={1},
   pages={267},
-  year={2022},
+  year={2023},
   publisher={MDPI},
   category={conference},
   abbr={MDPI Appl. Sci.},
