Update author names

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 
 @article{guerranti2023on,
   title={On the Adversarial Robustness of Graph Contrastive Learning Methods},
-  author={Guerranti, Filippo and Yi, Zinuo and Starovoit, Anna and Mazen Kamel, Rafiq and Geisler, Simon and G{\"u}nnemann, Stephan},
+  author={Guerranti, Filippo and Yi, Zinuo and Starovoit, Anna and Mazen Kamel, Rafiq and Geisler, Simon and Günnemann, Stephan},
   journal={NeurIPS 2023 Workshop: New Frontiers in Graph Learning},
   category={conference},
   abbr={NeurIPS GLFrontiers},
@@ -16,10 +16,9 @@
 }
 
 
-
 @article{guerranti2021caregivermatcher,
   title={CaregiverMatcher: Graph Neural Networks for Connecting Caregivers of Rare Disease Patients},
-  author={Guerranti, Filippo and Mannino, Mirco and Baccini, Federica and Bongini, Pietro and Pancino, Niccol and Visibelli, Anna and Marziali, Sara},
+  author={Guerranti, Filippo and Mannino, Mirco and Baccini, Federica and Bongini, Pietro and Pancino, Niccoló and Visibelli, Anna and Marziali, Sara},
   journal={Procedia Computer Science},
   volume={192},
   pages={1696--1704},
